# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.145 $ $Date: 2009-07-22 17:18:16 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2009-07-22  Christian Heller  <christian.heller@tuxtax.de>
        * Correct the names of a few constants in various files

2009-07-21  Christian Heller  <christian.heller@tuxtax.de>
        * Sort http constants alphabetically where useful
        * Add further http header constants, taken from the HTTP 1.1 RFC 2616 specification
        * Add further comparisons in function "select_http_request_header"

2009-03-03  Christian Heller  <christian.heller@tuxtax.de>
        * Continue handling of http headers in files "http_request_processor.c" and "http_request_selector.c"

2009-02-26  Christian Heller  <christian.heller@tuxtax.de>
        * Adapt file "xml_processor.c" to using the new function "append_part"

2009-02-23  Christian Heller  <christian.heller@tuxtax.de>
        * Add file "compound_http_name.c" for storing parsed http elements in one compound model
        * Add file "part_accessor.c"
        * Continue http request parser

2009-02-21  Christian Heller  <christian.heller@tuxtax.de>
        * Readd files "http_request_converter.c" and "http_response_converter.c"

2009-02-17  Christian Heller  <christian.heller@tuxtax.de>
        * Delete files "http_request_converter.c" and "http_response_converter.c"
        * Add file "http_request_compound_selector.c"

2009-02-10  Christian Heller  <christian.heller@tuxtax.de>
        * Add files "http_response_processor.c" and "http_response_selector.c"