@@ -12,9 +12,13 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $RCSfile: ChangeLog,v $ $Revision: 1.145 $ $Date: 2009-07-22 17:18:16 $ $Author: christian $
+# @version $RCSfile: ChangeLog,v $ $Revision: 1.146 $ $Date: 2009-07-30 22:05:38 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
+
+2009-07-30  Christian Heller  <christian.heller@tuxtax.de>
+        * Add new file "integer_assigner.c" starting extraction of source code
+            handling primitives (assign, compare etc.)
 
 2009-07-22  Christian Heller  <christian.heller@tuxtax.de>
         * Correct the names of a few constants in various files
